[package]
name = "ext4libtest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ext4_rs = {git = "https://github.com/yuoo655/ext4_rs.git", rev= "9d2e074"}
jbd2_rs = {git = "https://github.com/yuoo655/jbd2_rs.git"}
log = "0.4"
fuser = {git = "https://github.com/cberner/fuser.git"}
